# practices

./: .gitignore  README.md  newton.cpp
parser/: .gitignore  CMakeLists.txt  main.cpp  plot.py  readme.md
parser/include/: config.h  evalUtils.h  getInverseMatrix.h  parser_sjt.h  parser_v2.h
parser/scripts/: plot_ptran.py
parser/src/: CMakeLists.txt  getInverseMatrix.cpp  main.cpp  parser_sjt.cpp  parser_v2.cpp
parser/testcase/: readme.md  solution.txt
parser/testcase/testcase0/: Netlist0.txt
parser/testcase/testcase1/: Initial_val1.txt  Netlist1.txt  equation1.m  jacobian1.m  readme.md
parser/testcase/testcase2/: Initial_val2.txt  Netlist2.txt  equation2.m  jacobian2.m  readme.md
parser/testcase/testcase3/: Initial_val3.txt  Netlist3.txt  equation3.m  jacobian3.m  readme.md
parser/testcase/testcase4/: Netlist4.txt
